--- a/package.json
+++ b/package.json
@@ -1,29 +1,20 @@
 {
-  "name": "crowd-funding",
+  "name": "videogamereviewer",
   "version": "1.0.0",
-  "description": "",
+  "description": "An app where users can sign up to post and comment on their favorite games!",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "seed": "node seeds/seed.js"
+    "start": "node server.js"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BiggRonn/VideoGameReviewer.git"
+  },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.0",
-    "connect-session-sequelize": "^7.0.4",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.2.0",
-    "express-session": "^1.17.1",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+  "bugs": {
+    "url": "https://github.com/BiggRonn/VideoGameReviewer/issues"
   },
-  "devDependencies": {
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "^6.15.0",
-    "prettier": "^2.1.2"
-  }
+  "homepage": "https://github.com/BiggRonn/VideoGameReviewer#readme"
 }
