--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node seeds/index.js",
     "start": "node server.js"
   },
   "repository": {
@@ -18,8 +19,12 @@
   },
   "homepage": "https://github.com/BiggRonn/VideoGameReviewer#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.0",
+    "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
     "path": "^0.12.7",
     "sequelize": "^6.6.2"
